--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -260,6 +260,7 @@ body {
 
 .hint-table {
     font-family: monospace;
+    border: solid 1px black;
     visibility: hidden;
     z-index: 100;
     position: absolute;
@@ -275,16 +276,15 @@ body {
 
 .hint-table td {
     border: solid 1px black;
-    border-radius: 5px;
+    border-radius: 3px;
     background-color: rgba(200, 200, 0, 0.30);
     color: white;
     overflow-wrap: break-word;
 }
 
 .hint-table caption {
-    border: solid 1px black;
-    background-color: rgba(2000, 200, 0, 0.30);
-    border-radius: 5px;
+    background-color: rgba(200, 200, 0, 0.30);
+    border: 0;
     color: white;
     font-size: 120%;
     font-family: courier;
