--- a/res/templates/view-signals.tmpl
+++ b/res/templates/view-signals.tmpl
@@ -29,6 +29,7 @@
                 <tr>
                     <th style="text-align: center;">Variant</th>
                     <th style="text-align: center;">Payout</th>
+                    <th style="text-align: center;">Diversity</th>
                     <th style="text-align: center;">Notes</th>
                 </tr>
             </thead>
