--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -194,6 +194,7 @@ body {
     text-align: right;
     border: solid 1px black;
     border-radius: 5px;
+    font-family: monospace;
     background-color: rgba(250, 250, 250, 0.15);
 }
 
@@ -204,12 +205,12 @@ body {
     text-align: center;
     /* font-family: courier, courier new, serif; */
 }
-
+/*
 .stars-table tbody {
     font-size: larger;
     font-family: monospace;
-    /* font-family: courier, courier new, serif; */
 }
+*/
 
 #tr-odd {
     background-color: rgba(250, 250, 250, 0.10);
@@ -242,11 +243,11 @@ body {
     border-radius: 5px;
     background-color: rgba(250, 250, 250, 0.15);
 }
-
+/*
 .bodies-table tbody {
     font-size: larger;
-    /* font-family: courier, courier new, serif; */
 }
+*/
 
 .bodies-table caption {
     border: 1px solid white;
@@ -280,10 +281,11 @@ body {
     background-color: rgba(250, 250, 250, 0.15);
 }
 
+/*
 .signals-table tbody {
     font-size: larger;
-    /* font-family: courier, courier new, serif; */
 }
+*/
 
 .hint-table {
     font-family: monospace;
@@ -299,6 +301,8 @@ body {
     top: 7%;
     right: 12%;
     box-shadow: 5px 7px 10px black;
+/*    overflow-x: scroll; */
+    overflow-y: scroll;
 }
 
 .hint-table td {
@@ -338,5 +342,4 @@ body {
 .bodies-table caption:hover .hint-table {
     visibility: visible;
 }
-
 
