--- a/res/templates/view-signals.tmpl
+++ b/res/templates/view-signals.tmpl
@@ -5,8 +5,8 @@
 
 <thead>
     <tr>
-        <th style="text-align: right;">BodyName</th>
-        <th style="text-align: center;">Type</th>
+        <th style="text-align: right;">Signal Name</th>
+        <th style="text-align: center;">Signal Type</th>
         <th style="text-align: left;">Description</th>
     </tr>
 </thead>
