--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -213,11 +213,11 @@ body {
 */
 
 #tr-odd {
-    background-color: rgba(250, 250, 250, 0.10);
+    background-color: rgba(200, 200, 200, 0.15);
 }
 
 #tr-even {
-    background-color: rgba(250, 250, 250, 0.05);
+    background-color: rgba(200, 200, 200, 0.05);
 }
 
 .bodies-table {
@@ -296,12 +296,12 @@ body {
     border-radius: 8px;
     border: 0;
     border-spacing: 2px;
-    background-color: rgba(150, 150, 1500, 0.20);
+    background-color: rgba(150, 150, 150, 0.30);
     backdrop-filter: blur(7px);
     top: 7%;
     right: 12%;
     box-shadow: 5px 7px 10px black;
-/*    overflow-x: scroll; */
+    overflow-x: scroll;
     overflow-y: scroll;
 }
 
@@ -312,17 +312,19 @@ body {
     padding-bottom: 1px;
     border: solid 1px black;
     border-radius: 3px;
-    background-color: rgba(150, 150, 150, 0.35);
+    background-color: rgba(150, 150, 150, 0.30);
     color: white;
     overflow-wrap: break-word;
 }
 
 .hint-table caption {
-    border: 0;
+    border: solid 1px black;
+    border-radius: 3px;
     color: white;
     font-size: 120%;
     font-family: courier;
     font-weight: bold;
+    background-color: rgba(150, 150, 150, 0.30);
     backdrop-filter: blur(5px);
     overflow-wrap: break-word;
 }
