--- a/res/templates/view-system.tmpl
+++ b/res/templates/view-system.tmpl
@@ -7,8 +7,8 @@
     <tr>
         <th>Name</th>
         <th>&nbsp;</th>
-        <th>Type</th>
-        <th style="text-align: left;">C, L</th>
+        <th>Type,C</th>
+        <th style="text-align: left;">Lum</th>
         <th>Disc</th>
         <th>Dist(Ls)</th>
         <th>Rad(Sol)</th>
