--- a/res/templates/view-signals.tmpl
+++ b/res/templates/view-signals.tmpl
@@ -23,7 +23,7 @@
         <td style="text-align: right; font-weight: bold;">{{ $v.Name }}</td>
         <td style="text-align: center;">{{ $v.Type }}</td>
         {{ if $v.BioHint }}
-        <td style="text-align: left;">{{ $v.Description }} <span class="char-in-circle">&rBarr;</span>
+        <td style="text-align: left;">{{ $v.Description }} <span class="char-in-circle">&gt;</span>
             <table class="hint-table">
             <caption>{{ $v.Name }}</caption>
             <thead>
