--- a/res/templates/view-system.tmpl
+++ b/res/templates/view-system.tmpl
@@ -11,9 +11,9 @@
         <th style="text-align: left;">Lum</th>
         <th>Disc</th>
         <th>Dist(Ls)</th>
-        <th>Rad(Sol)</th>
-        <th>Mass(Sol)</th>
-        <th>Temper(K)</th>
+        <th>Rad &#9737;</th>
+        <th>Mass &#9737;</th>
+        <th>Temp &deg;&#8490; </th>
         <th>OrbPer(D)</th>
         <th>Eccent(e)</th>
         <th>Rings(N/R)</th>
