--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -16,7 +16,7 @@ body {
     grid-template-columns: 100%;
     grid-template-rows: 5% 90% 5%;
     padding: 0;
-    backdrop-filter: blur(3px);
+    /*backdrop-filter: blur(3px);*/
 }
 
 #view-top {
@@ -28,7 +28,7 @@ body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    backdrop-filter: blur(3px);
+    /*backdrop-filter: blur(3px);*/
 }
 
 #view-bottom-container {
@@ -38,7 +38,7 @@ body {
     margin: 0;
     overflow: hidden;
     white-space: nowrap;
-    backdrop-filter: blur(3px);
+    /*backdrop-filter: blur(3px);*/
 }
 
 #view-bottom {
@@ -54,7 +54,7 @@ body {
     height: 100%;
     margin: 0;
     text-align: center;
-    /*animation: view-bottom-ani 10s linear infinite;*/
+    animation: view-bottom-ani 10s linear infinite;
 }
 
 @keyframes view-bottom-ani {
@@ -104,10 +104,11 @@ body {
     grid-template-columns: 100%;
     grid-template-rows: 25% 25% 25% 25%;
     background-color: rgba(250, 250, 250, 0.1);
-    backdrop-filter: blur(3px);
+    /*backdrop-filter: blur(3px);*/
 }
 
 .button {
+    border: solid 1px black;
     border-radius: 8px;
     display: flex;
     flex-flow: wrap;
@@ -118,11 +119,11 @@ body {
     /*text-align: center;*/
     flex-wrap: wrap;
     color: white;
-    box-shadow: 5px 7px 10px black;
+    /*box-shadow: 5px 7px 10px black;*/
     background-color: rgba(218, 165, 32, 0.3);
     white-space: pre-wrap;
     word-wrap: break-word;
-    backdrop-filter: blur(3px);
+    /*backdrop-filter: blur(3px);*/
 }
 
 .button-text {
@@ -241,7 +242,6 @@ body {
 
 .bodies-table caption {
     text-align: right;
-    align: right;
 }
 
 .signals-table {
@@ -282,11 +282,11 @@ body {
     border-radius: 8px;
     border: 0;
     border-spacing: 2px;
-    background-color: rgba(150, 150, 150, 0.30);
-    backdrop-filter: blur(7px);
+    background-color: rgba(100, 100, 100, 0.80);
+    /*backdrop-filter: blur(7px);*/
     top: 7%;
     right: 12%;
-    box-shadow: 5px 7px 10px black;
+    /*box-shadow: 5px 7px 10px black;*/
     overflow-x: scroll;
     overflow-y: scroll;
 }
@@ -298,20 +298,20 @@ body {
     padding-bottom: 1px;
     border: solid 1px black;
     border-radius: 3px;
-    background-color: rgba(150, 150, 150, 0.30);
+    background-color: rgba(150, 150, 150, 0.80);
     color: white;
     /*overflow-wrap: break-word;*/
 }
 
 .hint-table caption {
     border: solid 1px black;
-    border-radius: 3px;
+    border-radius: 8px;
+    background-color: rgba(100, 100, 100, 0.80);
     color: white;
     font-size: 120%;
     font-family: 'Courier New', monospace;
     font-weight: bold;
-    background-color: rgba(150, 150, 150, 0.30);
-    backdrop-filter: blur(7px);
+    /* backdrop-filter: blur(7px); */
     /*overflow-wrap: break-word;*/
 }
 
