--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -3,27 +3,34 @@ body {
     background-image: url('background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    background-attachment: fixed;
+    /*height: 100vh; /* Fallback for browsers that do not support Custom Properties */
     height: calc(var(--vh, 1vh) * 100);
     color: white;
+    margin: 0;
+    margin-top: 0px;
+    margin-bottom: 0;
+    padding: 0;
+    padding-top: 0px;
+    padding-bottom: 0;
 }
 
 #left {
     float: left;
     width: 90%;
     height: 100vh;
-    display: grid;
+    display: inline-grid;
     grid-template-columns: 100%;
-    grid-template-rows: 5% 90% 5%;
-    padding: 0;
+    grid-template-rows: 6% 89% 5%;
     /*backdrop-filter: blur(3px);*/
 }
 
 #view-top {
+    margin-top: 5px;
     border-radius: 8px;
+    border: solid gray 1px;
     display: flex;
     background-color: rgba(0, 0, 0, 0.5);
-    margin: 0;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -33,9 +40,9 @@ body {
 
 #view-bottom-container {
     border-radius: 8px;
+    border: solid gray 1px;
     display: flex;
     background-color: rgba(0, 0, 0, 0.5);
-    margin: 0;
     overflow: hidden;
     white-space: nowrap;
     /*backdrop-filter: blur(3px);*/
@@ -52,7 +59,6 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    margin: 0;
     text-align: center;
     animation: view-bottom-ani 10s linear infinite;
 }
@@ -70,10 +76,11 @@ body {
 
 .view-main {
     border-radius: 8px;
+    border: solid gray 1px;
     margin-top: 4px;
     margin-bottom: 4px;
     color: white;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
     overflow-x: scroll;
     /*overflow-y: scroll;*/
 }
@@ -97,13 +104,16 @@ body {
 }
 
 #right {
+    border: 0;
+    margin: 0;
+    justify-self: right;
     float: right;
     width: 10%;
     height: 100vh;
-    display: grid;
+    display: inline-grid;
     grid-template-columns: 100%;
     grid-template-rows: 25% 25% 25% 25%;
-    background-color: rgba(250, 250, 250, 0.1);
+    background-color: rgba(0, 0, 0, 0.5);
     /*backdrop-filter: blur(3px);*/
 }
 
@@ -113,14 +123,14 @@ body {
     display: flex;
     flex-flow: wrap;
     justify-self: stretch;
-    margin: 4px;
+    margin: 5px;
     justify-content: center;
     align-items: center;
     /*text-align: center;*/
     flex-wrap: wrap;
     color: white;
-    /*box-shadow: 5px 7px 10px black;*/
-    background-color: rgba(218, 165, 32, 0.3);
+    box-shadow: 5px 7px 10px gray;
+    background-color: rgba(218, 165, 32, 0.4);
     white-space: pre-wrap;
     word-wrap: break-word;
     /*backdrop-filter: blur(3px);*/
@@ -142,7 +152,7 @@ body {
 }
 
 .button-active {
-    background-color: rgba(250, 200, 0, 0.6);
+    background-color: rgba(250, 200, 0, 0.7);
 }
 
 .button-attention {
