--- a/res/templates/view-bodies.tmpl
+++ b/res/templates/view-bodies.tmpl
@@ -40,9 +40,9 @@
         <th>Type</th>
         <th>Dist(Ls)</th>
         <th>DMTL</th>
-        <th>Rad(E)</th>
-        <th>Mass(E)</th>
-        <th>Temp(K)</th>
+        <th>Rad &oplus;</th>
+        <th>Mass &oplus;</th>
+        <th>Temp &deg;&#8490;</th>
         <th>Grav(G)</th>
         <th>Rs(N/R)</th>
         <th>Atmo</th>
