--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -3,8 +3,8 @@ body {
     background-image: url('background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
-    /*height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    /*background-attachment: fixed;*/
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
     height: calc(var(--vh, 1vh) * 100);
     color: white;
     margin: 0;
