--- a/res/webpage/wedpad.css
+++ b/res/webpage/wedpad.css
@@ -118,7 +118,7 @@ body {
 }
 
 .button {
-    border: solid 1px black;
+    border: solid 1px gray;
     border-radius: 8px;
     display: flex;
     flex-flow: wrap;
@@ -129,7 +129,7 @@ body {
     /*text-align: center;*/
     flex-wrap: wrap;
     color: white;
-    box-shadow: 5px 7px 10px gray;
+    /*box-shadow: 5px 7px 10px gray;*/
     background-color: rgba(218, 165, 32, 0.4);
     white-space: pre-wrap;
     word-wrap: break-word;
