--- a/res/templates/view-bodies.tmpl
+++ b/res/templates/view-bodies.tmpl
@@ -8,9 +8,9 @@
     {{ end }}
 {{ end }}
 
-<caption>
+<caption style="text-align: center;">
     {{ if not $nots }}
-        <span style="color: white; background-color: gray; font-size: larger;">Notable Objects</span>
+        <!-- <span style="color: white; background-color: gray; font-size: larger;">Notable Objects</span> -->
     {{ else }}
         <span style="color: black; background-color: yellow; font-size: larger;">Notable Objects&nbsp;<span class="char-in-circle">&gt;</span></span>
         <table class="hint-table">
