bio and ui fixes

--- a/res/templates/view-bodies.tmpl
+++ b/res/templates/view-bodies.tmpl
@@ -8,11 +8,11 @@
     {{ end }}
 {{ end }}
 
-<caption style="text-align: center;">
+<caption>
     {{ if not $nots }}
         <!-- <span style="color: white; background-color: gray; font-size: larger;">Notable Objects</span> -->
     {{ else }}
-        <span style="color: black; background-color: yellow; font-size: larger;">Notable Objects&nbsp;<span class="char-in-circle">&gt;</span></span>
+        <span style="color: black; background-color: yellow; font-size: larger;">Notable Objects&nbsp;<span class="char-in-circle">&rarr;</span></span>
         <table class="hint-table">
             <thead>
                 <tr>
